--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
-RewriteEngine On
+ReWriteEngine On
 
-RewriteCond %(REQUEST_FILENAME) !-f
-RewriteCond %(REQUEST_FILENAME) !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule . index.php [L]
